destroy, restore doc
